<resources>
    <string name="app_name">The 1987 Constitution of the Philippines</string>
    <string name="title_activity_preamble">Preamble</string>
    <string name="large_text">
        We, the sovereign Filipino people, imploring the aid of Almighty God, in order to build a
        just and humane society and establish a Government that shall embody our ideals and aspirations,
        promote the common good, conserve and develop our patrimony, and secure to ourselves and our posterity
        the blessings of independence and democracy under the rule of law and a regime of truth, justice, freedom,
        love, equality, and peace, do ordain and promulgate this Constitution.
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_articles">Articles</string>
    <string name="title_activity_article1">ARTICLE I</string>
    <string name="title_activity_article1_title">National Territory</string>
    <string name="title_activity_article2">ARTICLE II</string>
    <string name="title_activity_article2_title">Declaration Of Principles And State Policies</string>
    <string name="title_activity_article03">ARTICLE III</string>
    <string name="title_activity_article3">ARTICLE III</string>
    <string name="title_activity_article3_title">Bill of Rights</string>
    <string name="title_activity_article04">ARTICLE IV</string>
    <string name="title_activity_article4_title">Citizenship</string>
    <string name="title_activity_article05">ARTICLE V</string>
    <string name="title_activity_article05_title">Suffrage</string>
    <string name="title_activity_article06">ARTICLE VI</string>
    <string name="title_activity_article06_title">The Legislative Department</string>
    <string name="title_activity_article07">ARTICLE VII</string>
    <string name="title_activity_article07_title">Executive Department</string>
    <string name="title_activity_article08">ARTICLE VIII</string>
    <string name="title_activity_article08_title">Judicial Department</string>
    <string name="title_activity_article09">Article IX</string>
    <string name="title_activity_article09_title">Constitutional Commissions</string>
    <string name="title_activity_article09_title_A">A. Common Provisions</string>
    <string name="title_activity_article09_title_B">B. The Civil Service Commission</string>
    <string name="title_activity_article09_title_C">C. The Commission on Elections</string>
    <string name="title_activity_article09_title_D">D. Commission on Audit</string>
    <string name="title_activity_article10">Article X</string>
    <string name="title_activity_article10_title">Local Government</string>
    <string name="title_activity_article10_title_A">General Provisions</string>
    <string name="title_activity_article10_title_B">Autonomous Region</string>
    <string name="title_activity_article11">Article XI</string>
    <string name="title_activity_article11_title">Accountability of Public Officers</string>
    <string name="title_activity_article12">Article XII</string>
    <string name="title_activity_article12_title">National Economy and Patrimony</string>
    <string name="title_activity_article13">Article XIII</string>
    <string name="title_activity_article13_title_A">Social Justice and Human Rights</string>
    <string name="title_activity_article13_title_B">Labor</string>
    <string name="title_activity_article13_title_C">Agrarian and Natural Resources Reform</string>
    <string name="title_activity_article13_title_D">Urban Land Reform and Housing</string>
    <string name="title_activity_article13_title_E">Health</string>
    <string name="title_activity_article13_title_F">Women</string>
    <string name="title_activity_article13_title_G">Role and Rights of People’s Organizations</string>
    <string name="title_activity_article14_title_A">Education</string>
    <string name="title_activity_article14_title_B">Language</string>
    <string name="title_activity_article14_title_C">Science and Technology</string>
    <string name="title_activity_article14_title_D">Arts and Culture</string>
    <string name="title_activity_article14_title_E">Sports</string>
    <string name="article_4_section_1">The following are citizens of the Philippines</string>
    <string name="article_4_section_1_1">1. Those who are citizens of the Philippines at the time of the adoption of this Constitution.</string>
    <string name="article_4_section_1_2">2. Those whose fathers or mothers are citizens of the Philippines.</string>
    <string name="article_4_section_1_3">3. Those born before January 17, 1973, of Filipino mothers, who elect Philippine citizenship upon reaching the age of majority; and</string>
    <string name="article_4_section_1_4">4. Those who are naturalized in accordance with law.</string>
    <string name="article_6_section_25_1">1. The Congress may not increase the appropriations recommended by the President for the operation of the Government as specified in the budget. The form, content, and manner of preparation of the budget shall be prescribed by law.</string>
    <string name="article_6_section_25_2">2. No provision or enactment shall be embraced in the general appropriations bill unless it relates specifically to some particular appropriation therein. Any such provision or enactment shall be limited in its operation to the appropriation to which it relates.</string>
    <string name="article_6_section_25_3">3. The procedure in approving appropriations for the Congress shall strictly follow the procedure for approving appropriations for other departments and agencies.</string>
    <string name="article_6_section_25_4">4. A special appropriations bill shall specify the purpose for which it is intended, and shall be supported by funds actually available as certified by the National Treasurer, or to be raised by a corresponding revenue proposed therein.</string>
    <string name="article_6_section_25_5">5. No law shall be passed authorizing any transfer of appropriations; however, the President, the President of the Senate, the Speaker of the House of Representatives, the Chief Justice of the Supreme Court, and the heads of Constitutional Commissions may, by law, be authorized to augment any item in the general appropriations law for their respective offices from savings in other items of their respective appropriations.</string>
    <string name="article_6_section_25_6">6. Discretionary funds appropriated for particular officials shall be disbursed only for public purposes to be supported by appropriate vouchers and subject to such guidelines as may be prescribed by law.</string>
    <string name="article_6_section_25_7">7. If, by the end of any fiscal year, the Congress shall have failed to pass the general appropriations bill for the ensuing fiscal year, the general appropriations law for the preceding fiscal year shall be deemed reenacted and shall remain in force and effect until the general appropriations bill is passed by the Congress.</string>
    <string name="article_8_section_5_1">The Supreme Court shall have the following powers:</string>
    <string name="article_8_section_5_2">(1) Exercise original jurisdiction over cases affecting ambassadors, other public ministers and consuls, and over petitions for certiorari, prohibition, mandamus, quo warranto, and habeas corpus.</string>
    <string name="article_8_section_5_3">(2) Review, revise, reverse, modify, or affirm on appeal or certiorari, as the law or the Rules of Court may provide, final judgments and orders of lower courts in:</string>
    <string name="article_8_section_5_4">(a) All cases in which the constitutionality or validity of any treaty, international or executive agreement, law, presidential decree, proclamation, order, instruction, ordinance, or regulation is in question.</string>
    <string name="article_8_section_5_5">(b) All cases involving the legality of any tax, impost, assessment, or toll, or any penalty imposed in relation thereto.</string>
    <string name="article_8_section_5_6">(c) All cases in which the jurisdiction of any lower court is in issue.</string>
    <string name="article_8_section_5_7">(d) All criminal cases in which the penalty imposed is reclusion perpetua or higher.</string>
    <string name="article_8_section_5_8">(e) All cases in which only an error or question of law is involved.</string>
    <string name="article_8_section_5_9">(3) Assign temporarily judges of lower courts to other stations as public interest may require. Such temporary assignment shall not exceed six months without the consent of the judge concerned.</string>
    <string name="article_8_section_5_10">(4) Order a change of venue or place of trial to avoid a miscarriage of justice.</string>
    <string name="article_8_section_5_11">(5) Promulgate rules concerning the protection and enforcement of constitutional rights, pleading, practice, and procedure in all courts, the admission to the practice of law, the Integrated Bar, and legal assistance to the underprivileged. Such rules shall provide a simplified and inexpensive procedure for the speedy disposition of cases, shall be uniform for all courts of the same grade, and shall not diminish, increase, or modify substantive rights. Rules of procedure of special courts and quasi-judicial bodies shall remain effective unless disapproved by the Supreme Court.</string>
    <string name="article_8_section_5_12">(6) Appoint all officials and employees of the Judiciary in accordance with the Civil Service Law.</string>
    <string name="article_11_section_13_1">The Office of the Ombudsman shall have the following powers, functions, and duties:</string>
    <string name="article_11_section_13_2">(1) Investigate on its own, or on complaint by any person, any act or omission of any public official, employee, office or agency, when such act or omission appears to be illegal, unjust, improper, or inefficient.</string>
    <string name="article_11_section_13_3">(2) Direct, upon complaint or at its own instance, any public official or employee of the Government, or any subdivision, agency or instrumentality thereof, as well as of any government-owned or controlled corporation with original charter, to perform and expedite any act or duty required by law, or to stop, prevent, and correct any abuse or impropriety in the performance of duties.</string>
    <string name="article_11_section_13_4">(3) Direct the officer concerned to take appropriate action against a public official or employee at fault, and recommend his removal, suspension, demotion, fine, censure, or prosecution, and ensure compliance therewith.</string>
    <string name="article_11_section_13_5">(4) Direct the officer concerned, in any appropriate case, and subject to such limitations as may be provided by law, to furnish it with copies of documents relating to contracts or transactions entered into by his office involving the disbursement or use of public funds or properties, and report any irregularity to the Commission on Audit for appropriate action.</string>
    <string name="article_11_section_13_6">(5) Request any government agency for assistance and information necessary in the discharge of its responsibilities, and to examine, if necessary, pertinent records and documents.</string>
    <string name="article_11_section_13_7">(6) Publicize matters covered by its investigation when circumstances so warrant and with due prudence.</string>
    <string name="article_11_section_13_8">(7) Determine the causes of inefficiency, red tape, mismanagement, fraud, and corruption in the Government and make recommendations for their elimination and the observance of high standards of ethics and efficiency.</string>
    <string name="article_11_section_13_9">(8) Promulgate its rules of procedure and exercise such other powers or perform such functions or duties as may be provided by law.</string>
</resources>