<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


    <TextView
        android:textStyle="bold"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:textSize="@dimen/text_size"
        android:textColor="@color/colorBlack"
        android:text="@string/article_8_section_5_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

            <TextView
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:textSize="@dimen/text_size"
                android:textColor="@color/colorBlack"
                android:text="@string/article_8_section_5_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:textSize="@dimen/text_size"
                android:textColor="@color/colorBlack"
                android:text="@string/article_8_section_5_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingLeft="45dp"
                android:textSize="@dimen/text_size"
                android:textColor="@color/colorBlack"
                android:text="@string/article_8_section_5_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingLeft="45dp"
                android:textSize="@dimen/text_size"
                android:textColor="@color/colorBlack"
                android:text="@string/article_8_section_5_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingLeft="45dp"
                android:textSize="@dimen/text_size"
                android:textColor="@color/colorBlack"
                android:text="@string/article_8_section_5_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingLeft="45dp"
                android:textSize="@dimen/text_size"
                android:textColor="@color/colorBlack"
                android:text="@string/article_8_section_5_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingLeft="45dp"
                android:textSize="@dimen/text_size"
                android:textColor="@color/colorBlack"
                android:text="@string/article_8_section_5_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingLeft="45dp"
                android:textSize="@dimen/text_size"
                android:textColor="@color/colorBlack"
                android:text="@string/article_8_section_5_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:textSize="@dimen/text_size"
                android:textColor="@color/colorBlack"
                android:text="@string/article_8_section_5_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:textSize="@dimen/text_size"
                android:textColor="@color/colorBlack"
                android:text="@string/article_8_section_5_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:textSize="@dimen/text_size"
                android:textColor="@color/colorBlack"
                android:text="@string/article_8_section_5_11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:paddingBottom="25dp"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:textSize="@dimen/text_size"
                android:textColor="@color/colorBlack"
                android:text="@string/article_8_section_5_12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>