<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


    <TextView
        android:textStyle="bold"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:textSize="@dimen/text_size"
        android:textColor="@color/colorBlack"
        android:text="@string/article_11_section_13_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

            <TextView
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:textSize="@dimen/text_size"
                android:textColor="@color/colorBlack"
                android:text="@string/article_11_section_13_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <TextView
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:textSize="@dimen/text_size"
                android:textColor="@color/colorBlack"
                android:text="@string/article_11_section_13_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:textSize="@dimen/text_size"
                android:textColor="@color/colorBlack"
                android:text="@string/article_11_section_13_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:textSize="@dimen/text_size"
                android:textColor="@color/colorBlack"
                android:text="@string/article_11_section_13_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:textSize="@dimen/text_size"
                android:textColor="@color/colorBlack"
                android:text="@string/article_11_section_13_6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:textSize="@dimen/text_size"
                android:textColor="@color/colorBlack"
                android:text="@string/article_11_section_13_7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:textSize="@dimen/text_size"
                android:textColor="@color/colorBlack"
                android:text="@string/article_11_section_13_8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_marginBottom="25dp"
                android:paddingTop="20dp"
                android:paddingRight="20dp"
                android:paddingLeft="20dp"
                android:textSize="@dimen/text_size"
                android:textColor="@color/colorBlack"
                android:text="@string/article_11_section_13_9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>