<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Article14.Article14Activity"
    tools:showIn="@layout/activity_article14">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/articles14BtnA"
            app:cardCornerRadius="10dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="3dp">

            <TextView
                android:textColor="@color/colorBlack"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textSize="18sp"
                android:text="@string/title_activity_article14_title_A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/articles14BtnB"
            app:cardCornerRadius="10dp"
            android:layout_margin="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="3dp">

            <TextView
                android:textColor="@color/colorBlack"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textSize="18sp"
                android:text="@string/title_activity_article14_title_B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/articles14BtnC"
            app:cardCornerRadius="10dp"
            android:layout_margin="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="3dp">

            <TextView
                android:textColor="@color/colorBlack"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textSize="18sp"
                android:text="@string/title_activity_article14_title_C"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/articles14BtnD"
            app:cardCornerRadius="10dp"
            android:layout_margin="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="3dp">

            <TextView
                android:textColor="@color/colorBlack"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textSize="18sp"
                android:text="@string/title_activity_article14_title_D"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/articles14BtnE"
            app:cardCornerRadius="10dp"
            android:layout_margin="7dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="3dp">

            <TextView
                android:textColor="@color/colorBlack"
                android:paddingLeft="25dp"
                android:paddingRight="25dp"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:textSize="18sp"
                android:text="@string/title_activity_article14_title_E"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


        </androidx.cardview.widget.CardView>




    </LinearLayout>


</androidx.core.widget.NestedScrollView>